<resources>
    <string name="app_name">Лабораторна робота 1</string>
    <string name="shortCat">Кіт - це домашній звір, який зазвичай дуже любить свого господаря. Вона може бути дуже грайливою, але також потребує багато уваги і догляду.</string>
    <string name="shortDog">Собака - це домашній звір, який зазвичай вірний своєму господарю. Вона може бути відмінним компаньйоном, але також потребує багато уваги і догляду.</string>
    <string name="shortParrot">Папуга - це домашній звір, який зазвичай співає та повторює слова свого господаря. Вона може бути дуже розумною, але також потребує багато уваги і догляду.</string>
    <string name="CatDetails">Кіт (Felis) — рід хижих ссавців родини котових (Felidae). У деяких старіших системах класифікації до нього зараховували всіх представників малих кішок (Felinae), проте зараз безпосередньо до роду відносяться лише кілька видів невеликих тварин, що мешкають у Євразії та Африці.Найвідомішим представником цього роду є свійський кіт — підвид кота лісового. За розміром найменшим представником роду є вид мураховий тигр довжина тіла і голови якого становить від 38 до 44 см. Найбільшим є кіт очеретяний із довжиною тіла і голови від 62 до 76 см. Види котів ( Felis) мешкають у широкому різновиді природних середовищ, від болотяних до пустель, і харчуються здебільшого малими мишоподібними, птахами й іншими дрібними тваринами.</string>
    <string name="DogDetails">Собака (Canis familiaris або Canis lupus familiaris) є одомашненим нащадком вовка. Його також називають домашнім собакою, він походить від вимерлого плейстоценового вовка, а сучасний вовк є найближчим живим родичем собаки. Собаки були першим видом, одомашненим мисливцями-збирачами понад 15 000 років тому до розвитку сільського господарства. Завдяки довгому зв’язку з людьми собаки розширилися до великої кількості домашніх особин і отримали здатність процвітати на дієті, багатій на крохмаль, яка була б недостатньою для інших собак.</string>
    <string name="ParrotDetails">Папуги, також відомі як пситтацини, є птахами приблизно 398 видів у 92 родах, що входять до складу ряду Psittaciformes, які зустрічаються переважно в тропічних і субтропічних регіонах. Ряд підрозділяється на три надродини: Psittacoidea («справжні» папуги), Cacatuoidea (какаду) і Strigopoidea (новозеландські папуги). Одна третина всіх видів папуг знаходиться під загрозою зникнення, із вищим сукупним ризиком вимирання (Індекс Червоного списку МСОП), ніж будь-яка інша порівнянна група птахів. Папуги, як правило, поширені в пантропіках, де кілька видів мешкають також у помірних регіонах південної півкулі. Найбільша різноманітність папуг в Південній Америці та Австралазії.</string>
    <string name="cat">Кіт</string>
    <string name="dog">Собака</string>
    <string name="parrot">Папуга</string>
    <string name="choice_animal">Виберіть тваринку</string>
    <string name="details">Детальніше</string>
    <string name="back">Назад</string>

</resources>